# huge-ai-search

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  google-ai-search-mcp-bug.md  google-ai-search-mcp-plan.md  login_chrome.py  login_edge.py  login_google.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-browser.ts  setup_browser.py  setup_git_proxy.py  test-all-links.ts  test-debug-sources.ts  test-debug.ts  test-debug2.ts  test-extract.ts  test-final.ts  test-js-eval.ts  test-local.ts  test-no-intercept.ts  test-regex.ts  test-search.mjs  test-simple.ts  test-sources.ts  test-structure.ts  test_after_login.py  test_headless_debug.py  test_local.py  test_search.py  test_with_saved_data.py  其他readme.md
.github/scripts/: auto_fix.py
.github/workflows/: ci-auto-fix.yml  huge-ai-chat-auto-tag.yml  huge-ai-chat.yml  release.yml
.kiro/hooks/: auto-code-review.kiro.hook  browser-selector-check.kiro.hook  check-mcp-logs.kiro.hook  git-commit-helper.kiro.hook  mcp-search-best-practice.kiro.hook  python-test-on-edit.kiro.hook  search-pitfalls-first.kiro.hook  steering-docs-sync.kiro.hook
.kiro/specs/google-ai-search-mcp/: design.md  requirements.md  tasks.md
.kiro/specs/nodriver-migration/: design.md  requirements.md  tasks.md
.kiro/specs/patchright-login-cooldown/: design.md  requirements.md  tasks.md
.kiro/steering/: mcp-tools.md  product.md  structure.md  tech.md
docs/: ci-autofix-checklist.md  ci-autofix-playbook.md
extensions/huge-ai-chat/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extensions/huge-ai-chat/media/: index.html  main.css  main.js
extensions/huge-ai-chat/scripts/: check-release-readiness.js
extensions/huge-ai-chat/src/: extension.ts
extensions/huge-ai-chat/src/auth/: SetupRunner.ts
extensions/huge-ai-chat/src/chat/: ChatController.ts  ThreadStore.ts  responseFormatter.ts  types.ts
extensions/huge-ai-chat/src/mcp/: McpClientManager.ts
extensions/huge-ai-chat/tests/: responseFormatter.test.js
git-proxy-mcp/: README.md  pyproject.toml
git-proxy-mcp/src/git_proxy_mcp/: __init__.py  server.py
patchright-mcp/: .gitignore  README.md  mcp-config-example.json  pyproject.toml
patchright-mcp/src/patchright_mcp/: __init__.py  __main__.py  browser.py  server.py
patchright-mcp/tests/: __init__.py  test_cooldown.py
python/: README.md  pyproject.toml  requirements.txt  setup_browser.py
python/tests/: test_extraction.py  test_models.py  test_server.py  test_url.py
src/: coordinator.ts  index.ts  logger.ts  searcher.ts  setup.ts
src/google_ai_search/: __init__.py  searcher.py  server.py
tests/: test_browser.py  test_extraction.py  test_models.py  test_proxy.py  test_server.py  test_url.py
