[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-ai-search-mcp"
version = "1.0.0"
description = "Google AI Search MCP Server - 使用 Patchright 抓取 Google AI 模式搜索结果"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["mcp", "google", "ai", "search", "patchright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "patchright>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
google-ai-search-mcp = "google_ai_search.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_ai_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hypothesis]
max_examples = 100
