[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huge-ai-search"
version = "1.1.0"
description = "Huge AI Search MCP Server - AI 搜索聚合工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "wanghui5801" }
]
keywords = ["mcp", "ai", "search", "nodriver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "nodriver>=0.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
huge-ai-search = "google_ai_search.server:run"

[project.urls]
Homepage = "https://github.com/wanghui5801/huge-ai-search"
Repository = "https://github.com/wanghui5801/huge-ai-search"

[tool.hatch.build.targets.wheel]
packages = ["src/google_ai_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hypothesis]
max_examples = 100
