[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-proxy-mcp"
version = "0.1.0"
description = "MCP server for auto-detecting and configuring Git proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
git-proxy-mcp = "git_proxy_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_proxy_mcp"]
